@@ -10,6 +10,7 @@
     <component>gstreamer+%28core%29</component>
     <milestones>
       <milestone>HEAD</milestone>
+      <milestone>0.10.16</milestone>
       <milestone>0.10.15</milestone>
       <milestone>0.10.14</milestone>
       <milestone>0.10.13</milestone>
@@ -64,6 +65,7 @@
     <component>gst-plugins-base</component>
     <milestones>
       <milestone>HEAD</milestone>
+      <milestone>0.10.16</milestone>
       <milestone>0.10.15</milestone>
       <milestone>0.10.14</milestone>
       <milestone>0.10.13</milestone>
@@ -174,6 +176,7 @@
     <component>gst-python</component>
     <milestones>
       <milestone>HEAD</milestone>
+      <milestone>0.10.10</milestone>
       <milestone>0.10.9</milestone>
       <milestone>0.10.8</milestone>
       <milestone>0.10.7</milestone>
@@ -201,6 +204,7 @@
     <component>gst-ffmpeg</component>
     <milestones>
       <milestone>HEAD</milestone>
+      <milestone>0.10.4</milestone>
       <milestone>0.10.3</milestone>
       <milestone>0.10.2</milestone>
       <milestone>0.10.1</milestone>
